<resources>
    <string name="app_name">Test Trinity</string>
    <string name="name">Name</string>
    <string name="header_main">Main Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sub_header">Sub Information</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="dob">DOB</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>